Add Oauth2 user authentication [Scala] (#946)
Add initial version of Oauth2 user authentication

--- a/modules/user/server-scala/src/main/resources/application.conf
+++ b/modules/user/server-scala/src/main/resources/application.conf
@@ -2,5 +2,37 @@ user {
   auth {
     skipConfirmation = false
     confirmRegistrationRoute = "/confirm/"
+
+    google {
+      clientId = ""
+      clientSecret = ""
+      state = ""
+      scope = ""
+      callback = ""
+    }
+
+    facebook {
+      clientId = ""
+      clientSecret = ""
+      state = ""
+      scope = ""
+      callback = ""
+    }
+
+    github {
+      clientId = ""
+      clientSecret = ""
+      state = ""
+      scope = ""
+      callback = ""
+    }
+
+    linkedin {
+      clientId = ""
+      clientSecret = ""
+      state = ""
+      scope = ""
+      callback = ""
+    }
   }
 }
