--- a/docker-compose.scala.yml
+++ b/docker-compose.scala.yml
@@ -1,46 +1,48 @@
 version: '3'
 services:
- scala-server:
-  build:
-   context: .
-   dockerfile: Dockerfile-scala
-  environment:
-   - SCALA_ENV=development
-  container_name: apollo_scala_server
-  working_dir: ${APP_DIR}/packages/server-scala
-  volumes:
-        - ./modules:${APP_DIR}/modules
-        - ./packages/server-scala:${APP_DIR}/packages/server-scala
-        - ./packages/server-scala/project/plugin.sbt:${APP_DIR}/packages/server-scala/project/plugin.sbt
-        - ./packages/server-scala/project/build.properties:${APP_DIR}/packages/server-scala/project/build.properties
-        - ./packages/server-scala/build.sbt:${APP_DIR}/packages/server-scala/build.sbt
-        - ./packages/server-scala/src:${APP_DIR}/packages/server-scala/src
-  command: >
-    sh -c 'sbt ~reStart'
-  ports:
-   - 8080:8080
-  stdin_open: true
-  tty: true
 
- client:
+  apollo_scala_server:
     build:
       context: .
-      dockerfile: Dockerfile
-      args:
-        APP_DIR: ${APP_DIR}
+      dockerfile: Dockerfile-scala
     environment:
-    - NODE_ENV=development
-    container_name: apollo_client
-    tty: true
-    stdin_open: true
+    - SCALA_ENV=development
+    container_name: apollo_scala_server
+    working_dir: ${APP_DIR}/packages/server-scala
     volumes:
-    - ./:${APP_DIR}
-    - ${APP_DIR}/build
-    - ${APP_DIR}/node_modules
-    working_dir: ${APP_DIR}
-    user: node
+    - ./modules:${APP_DIR}/modules
+    - ./packages/server-scala:${APP_DIR}/packages/server-scala
+    - ./packages/server-scala/project/plugin.sbt:${APP_DIR}/packages/server-scala/project/plugin.sbt
+    - ./packages/server-scala/project/build.properties:${APP_DIR}/packages/server-scala/project/build.properties
+    - ./packages/server-scala/build.sbt:${APP_DIR}/packages/server-scala/build.sbt
+    - ./packages/server-scala/src:${APP_DIR}/packages/server-scala/src
     command: >
-      sh -c 'yarn && yarn watch-client'
+      sh -c 'sbt ~reStart'
     ports:
-    - 3000:3000
+    - 8080:8080
+    stdin_open: true
+    tty: true
 
+  apollo_client:
+      build:
+        context: .
+        dockerfile: Dockerfile
+        args:
+          APP_DIR: ${APP_DIR}
+      depends_on:
+      - apollo_scala_server
+      environment:
+      - NODE_ENV=development
+      container_name: apollo_client
+      tty: true
+      stdin_open: true
+      volumes:
+      - ./:${APP_DIR}
+      - ${APP_DIR}/build
+      - ${APP_DIR}/node_modules
+      working_dir: ${APP_DIR}
+      user: node
+      command: >
+        sh -c 'yarn && yarn watch-client'
+      ports:
+      - 3000:3000
