--- a/modules/authentication/server-scala/src/test/resources/application.conf
+++ b/modules/authentication/server-scala/src/test/resources/application.conf
@@ -1,1 +1,13 @@
+loadPaths = ["../../modules/authentication/server-scala"]
+
 skipConfirmation = true
+
+slick.dbs {
+  default = {
+    profile = "slick.jdbc.H2Profile$"
+    db {
+      url = "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1"
+      driver = "org.h2.Driver"
+    }
+  }
+}
