--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -66,6 +66,7 @@
     "apollo-logger": "^0.3.0",
     "apollo-upload-client": "^8.0.0",
     "graphql": "^0.13.0",
+    "html-loader": "^0.5.5",
     "minilog": "^3.1.0",
     "rxjs": "^6.3.3",
     "subscriptions-transport-ws": "^0.9.4",
