--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -45,6 +45,7 @@
     "@module/chat-client-react": "^1.0.0",
     "@module/contact-client-react": "^1.0.0",
     "@module/core-client-react": "^1.0.0",
+    "@module/forms-client-react": "^1.0.0",
     "@module/counter-client-react": "^1.0.0",
     "@module/i18n-client-react": "^1.0.0",
     "@module/i18n-common-react": "^1.0.0",
