--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,6 @@
 // https://scalameta.org/scalafmt/docs/configuration.html
 maxColumn = 120
 binPackImportSelectors = true
+newlines.alwaysBeforeCurlyBraceLambdaParams = true
+optIn.configStyleArguments = false
+optIn.breakChainOnFirstMethodDot = false
