--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,3 +3,4 @@ maxColumn = 120
 binPackImportSelectors = true
 newlines.alwaysBeforeCurlyBraceLambdaParams = true
 optIn.breakChainOnFirstMethodDot = false
+continuationIndent.extendSite = 2
