--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,3 +4,4 @@ binPackImportSelectors = true
 newlines.alwaysBeforeCurlyBraceLambdaParams = true
 optIn.breakChainOnFirstMethodDot = false
 continuationIndent.extendSite = 2
+align.tokens = []
