--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,11 @@
 // https://scalameta.org/scalafmt/docs/configuration.html
+
 maxColumn = 120
 binPackImportSelectors = true
 newlines.alwaysBeforeCurlyBraceLambdaParams = true
 optIn.breakChainOnFirstMethodDot = false
 continuationIndent.extendSite = 2
 align.tokens = []
+align.openParenCallSite = false
+align.openParenDefnSite = false
+danglingParentheses = true
