--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,7 +5,10 @@ binPackImportSelectors = true
 newlines.alwaysBeforeCurlyBraceLambdaParams = true
 optIn.breakChainOnFirstMethodDot = false
 continuationIndent.extendSite = 2
-align.tokens = []
+align.tokens = [
+  {code = "%", owner = "Term.ApplyInfix"},
+  {code = "%%", owner = "Term.ApplyInfix"}
+]
 align.openParenCallSite = false
 align.openParenDefnSite = false
 danglingParentheses = true
