--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production spin build",
     "clean": "rimraf build .expo .tmp",
+    "android": "spin -e android -d ios watch",
+    "ios": "spin -e ios -d android watch",
     "exp": "cross-env NODE_ENV=production spin exp",
     "exp-login": "cross-env NODE_ENV=production spin exp login -u $EXP_USERNAME -p $EXP_PASSWORD --non-interactive",
     "exp-publish": "yarn exp-login && yarn exp -- p --non-interactive",
