--- a/packages/server/.env
+++ b/packages/server/.env
@@ -9,6 +9,7 @@ DB_USER=
 DB_PASSWORD=
 DB_DATABASE=
 DB_SSL=
+DB_FIREBASE='https://apollo-universal-starter-dc4c1.firebaseio.com'
 
 # Auth
 AUTH_SECRET=secret, change for production
