--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -77,6 +77,7 @@
     "error-stack-parser": "^2.0.1",
     "express": "^4.16.2",
     "filesize": "^3.5.11",
+    "firebase-admin": "^6.5.0",
     "graphql": "^0.13.0",
     "graphql-auth": "0.2.3",
     "graphql-iso-date": "^3.5.0",
