--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -70,6 +70,7 @@
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.0",
     "apollo-server-express": "^2.0.0",
+    "apollo-server": "^2.3.1",
     "apollo-server-module-graphiql": "1.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
