--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -69,6 +69,7 @@
     "minilog": "^3.1.0",
     "rxjs": "^6.3.3",
     "subscriptions-transport-ws": "^0.9.4",
+    "to-string-loader": "^1.1.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
