--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -43,6 +43,9 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/react-fontawesome": "0.0.18",
     "@module/module-common": "^1.0.0",
+    "@module/module-client-vue": "^1.0.0",
+    "@module/core-client-vue": "^1.0.0",
+    "@module/counter-client-vue": "^1.0.0",
     "antd": "^3.10.0",
     "apollo-cache-inmemory": "1.2.9",
     "apollo-cache-router": "^1.1.6",
