--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -59,6 +59,7 @@
     "apollo-upload-client": "^8.0.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "error-stack-parser": "^2.0.1",
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
