--- a/modules/core/client-vue/package.json
+++ b/modules/core/client-vue/package.json
@@ -9,6 +9,7 @@
     "vue-apollo": "^3.0.0-beta.27",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0",
     "error-stack-parser": "^2.0.1",
     "sourcemapped-stacktrace": "^1.1.8"
   }
