--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -79,7 +79,8 @@
     "vue": "^2.5.22",
     "vue-apollo": "^3.0.0-beta.27",
     "vue-router": "^3.0.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@alienfast/i18next-loader": "^1.0.16",
