--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -149,6 +149,13 @@
     "@types/stripe": "^5.0.21",
     "@types/webpack-env": "^1.13.5",
     "apollo-utilities": "^1.0.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-plugin-jsx-event-modifiers": "^2.0.5",
+    "babel-plugin-jsx-v-model": "^2.0.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-vue": "^2.0.2",
+    "@babel/runtime": "^7.3.1",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "caporal": "^0.10.0",
     "chai": "^4.1.2",
@@ -166,6 +173,8 @@
     "request": "^2.83.0",
     "resolve-url-loader": "^2.2.1",
     "rimraf": "^2.6.2",
+    "vue-loader": "14.2.2",
+    "vue-server-renderer": "^2.5.22",
     "ws": "^5.1.1"
   },
   "peerDependencies": {
