--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "less-loader": "^4.1.0",
     "lint-staged": "^7.1.2",
     "mini-css-extract-plugin": "^0.4.1",
+    "node-hmr-plugin": "^1.0.1",
     "node-sass": "^4.7.2",
     "openurl": "^1.1.1",
     "postcss-loader": "^3.0.0",
@@ -176,7 +177,6 @@
     "webpack-manifest-plugin": "^2.0.3",
     "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
-    "webpack-shell-plugin": "^0.5.0",
     "webpack-sources": "^1.1.0",
     "webpack-virtual-modules": "^0.1.10",
     "whatwg-fetch": "^2.0.4"
