--- a/package.json
+++ b/package.json
@@ -194,6 +194,7 @@
     "graphql": "14.3.1",
     "iterall": "^1.2.2",
     "upath": "^1.1.0",
+    "style-loader": "^1.0.0",
     "watchpack": "https://github.com/Globegitter/watchpack"
   }
 }
