--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -37,6 +37,7 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
