--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "watch": "lerna run --scope={server,client} --parallel watch --stream",
     "watch:vue": "cross-env SSR=false lerna run --scope={server,client-vue} --parallel watch --stream",
     "watch:angular": "cross-env SSR=false lerna run --scope={server,client-angular} --parallel watch --stream",
-    "watch:android": "lerna run --scope={server,mobile} --parallel watch:android --stream",
-    "watch:ios": "lerna run --scope={server,mobile} --parallel watch:ios --stream",
+    "watch:android": "npm-run-all --parallel watch-server watch-android",
+    "watch:ios": "npm-run-all --parallel watch-server watch-ios",
+    "watch-android": "yarn workspace mobile watch:android",
+    "watch-ios": "yarn workspace mobile watch:ios",
     "watch-client": "cross-env SSR=false lerna run --scope=client watch --stream",
     "watch-server": "cross-env SSR=false lerna run --scope=server watch --stream",
     "storybook": "lerna run --scope=client storybook --stream",
@@ -94,11 +96,11 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-destructuring": "^7.0.0",
     "@babel/plugin-transform-for-of": "^7.0.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
@@ -117,8 +119,8 @@
     "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
     "babel-preset-vue": "^2.0.2",
     "clean-webpack-plugin": "^1.0.1",
-    "css-loader": "^1.0.0",
     "core-js": "^3.1.3",
+    "css-loader": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
@@ -146,12 +148,13 @@
     "mini-css-extract-plugin": "^0.4.1",
     "node-hmr-plugin": "^1.0.1",
     "node-sass": "^4.7.2",
+    "npm-run-all": "^4.1.5",
     "openurl": "^1.1.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.9.2",
-    "regenerator-runtime": "^0.13.2",
     "qrcode-terminal": "^0.12.0",
     "raw-loader": "^0.5.1",
+    "regenerator-runtime": "^0.13.2",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.1",
     "source-list-map": "^2.0.0",
@@ -187,6 +190,7 @@
     "opencollective": "^1.0.3"
   },
   "resolutions": {
+    "@expo/vector-icons": "https://github.com/sysgears/vector-icons#master",
     "fbjs": "^1.0.0",
     "hard-source-webpack-plugin": "https://github.com/conorh/hard-source-webpack-plugin",
     "kleur": "^3.0.3",
