--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -39,7 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "@expo/vector-icons": "^10.0.1",
-    "antd-mobile-rn": "^2.2.1",
+    "antd-mobile-rn": "^2.3.3",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.4.7",
@@ -68,7 +68,7 @@
     "lodash": "^4.17.4",
     "metro-minify-terser": "^0.56.0",
     "minilog": "^3.1.0",
-    "native-base": "^2.3.5",
+    "native-base": "~2.12.0",
     "prop-types": "^15.6.0",
     "react": "16.8.3",
     "react-apollo": "^3.0.0",
